--- a/Live Character Counter/Index.html
+++ b/Live Character Counter/Index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
     <div class="container">
-         
+         <h3>Live Character Counter</h3>
+         <textarea id="text" onkeyup="countChracters()" placeholder="Write Your Text..."></textarea>
+         <p>Total Character : <span class="count" id="result">0</span></p>
     </div>
+    <script>
+      function countChracters(){
+          var chracters=document.getElementById('text').value;
+          chracters=chracters.replace(/\s/g, ' ');
+          document.getElementById('result').innerHTML=chracters.length;
+      }
+    </script>
 </body>
 </html>
